made page subtitles on songs and instrumentals have the same height, but expandable width.  visual fix for desktop view (was causing ui to jump up and down between when navigating between pages). removed some empty divs that weren't doing anything.

--- a/styles.css
+++ b/styles.css
@@ -1154,6 +1154,10 @@ p {
     text-align: center;
     position: relative;
     overflow: hidden;
+    min-height: 280px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .header-background {
